# EfficientAD_TRT

./: .gitignore  CMakeLists.txt  efficientAD_det.cpp  model.txt  readme.md
src/: config.h  model.cpp  postprocess.cpp  postprocess.h  preprocess.cu  preprocess.h  utils.h
